fixed vertical scroll overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@ body {
 
 .main {
   align-self: center;  
+  margin: auto;
   background-color: #fff;
   box-shadow: 0px 12px 46px -15px rgba(0,0,0,0.35);
   padding: 0px;
